--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio</title>
+    <title>Ejercicio 3</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -12,7 +12,7 @@
             margin: 0;
             padding: 0;
         }
-        h1, h2, h3 {
+        h1, h2 {
             text-align: center;
             color: #444;
         }
@@ -26,31 +26,67 @@
             margin: auto;
             overflow: hidden;
         }
-        .destination {
+        .game {
             background: #fff;
             padding: 20px;
             margin: 20px 0;
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         }
-        .destination img {
+        .game img {
             display: block;
             margin: 10px auto;
             max-width: 100%;
             height: auto;
             border-radius: 10px;
         }
-        .destination p {
+        .game p {
             text-align: justify;
             line-height: 1.6;
         }
-        .destination h2 {
+        .game h2 {
             margin-bottom: 10px;
             font-size: 1.8em;
             color: #333;
         }
-        .destination p strong {
+        .game p strong {
             color: #555;
         }
     </style>
 </head>
+<body>
+    <div class="container">
+        <h1>Videojuegos</h1>
+
+        <div class="game">
+            <h2>The Legend of Zelda: Breath of the Wild</h2>
+            <img src="" alt="The Legend of Zelda: Breath of the Wild">
+            <p><strong>Resumen:</strong> En este juego de acción y aventura, los jugadores exploran un vasto mundo abierto lleno de misterios, enemigos y desafíos. Link debe rescatar a la princesa Zelda y salvar el reino de Hyrule del malvado Ganon.</p>
+        </div>
+
+        <div class="game">
+            <h2>Red Dead Redemption 2</h2>
+            <img src="" alt="Red Dead Redemption 2">
+            <p><strong>Resumen:</strong> Este juego de acción y aventura ambientado en el salvaje oeste sigue la historia de Arthur Morgan, un forajido que debe lidiar con la decadencia de su banda mientras es perseguido por las autoridades.</p>
+        </div>
+
+        <div class="game">
+            <h2>God of War</h2>
+            <img src="" alt="God of War">
+            <p><strong>Resumen:</strong> Kratos, el dios de la guerra, se embarca en una nueva aventura en la mitología nórdica junto a su hijo Atreus. El juego combina combates intensos con una narrativa profunda y emocional.</p>
+        </div>
+
+        <div class="game">
+            <h2>Cyberpunk 2077</h2>
+            <img src="" alt="Cyberpunk 2077">
+            <p><strong>Resumen:</strong> En un futuro distópico, los jugadores asumen el papel de V, un mercenario que busca un implante único que otorga la inmortalidad. El juego ofrece un mundo abierto lleno de opciones y personalización.</p>
+        </div>
+
+        <div class="game">
+            <h2>Among Us</h2>
+            <img src="" alt="Among Us">
+            <p><strong>Resumen:</strong> Este juego multijugador en línea pone a los jugadores en una nave espacial donde deben completar tareas mientras intentan descubrir quiénes son los impostores que intentan sabotear la misión.</p>
+        </div>
+    </div>
+</body>
+</html>
