--- a/index.html
+++ b/index.html
@@ -60,31 +60,31 @@
 
         <div class="game">
             <h2>The Legend of Zelda: Breath of the Wild</h2>
-            <img src="https://upload.wikimedia.org/wikipedia/en/c/c6/The_Legend_of_Zelda_Breath_of_the_Wild.jpg" alt="Legend of Zelda: Breath of the Wild">
+            <img src="https://upload.wikimedia.org/wikipedia/en/c/c6/The_Legend_of_Zelda_Breath_of_the_Wild.jpg" width="300" alt="Legend of Zelda: Breath of the Wild">
             <p><strong>Resumen:</strong> En este juego de acción y aventura, los jugadores exploran un vasto mundo abierto lleno de misterios, enemigos y desafíos. Link debe rescatar a la princesa Zelda y salvar el reino de Hyrule del malvado Ganon.</p>
         </div>
 
         <div class="game">
             <h2>Red Dead Redemption 2</h2>
-            <img src="https://image.api.playstation.com/cdn/UP1004/CUSA03041_00/Hpl5MtwQgOVF9vJqlfui6SDB5Jl4oBSq.png" alt="Red Dead Redemption 2">
+            <img src="https://image.api.playstation.com/cdn/UP1004/CUSA03041_00/Hpl5MtwQgOVF9vJqlfui6SDB5Jl4oBSq.png" width="300" alt="Red Dead Redemption 2">
             <p><strong>Resumen:</strong> Este juego de acción y aventura ambientado en el salvaje oeste sigue la historia de Arthur Morgan, un forajido que debe lidiar con la decadencia de su banda mientras es perseguido por las autoridades.</p>
         </div>
 
         <div class="game">
             <h2>God of War</h2>
-            <img src="https://cdn1.epicgames.com/offer/3ddd6a590da64e3686042d108968a6b2/EGS_GodofWar_SantaMonicaStudio_S2_1200x1600-fbdf3cbc2980749091d52751ffabb7b7_1200x1600-fbdf3cbc2980749091d52751ffabb7b7" alt="God of War">
+            <img src="https://cdn1.epicgames.com/offer/3ddd6a590da64e3686042d108968a6b2/EGS_GodofWar_SantaMonicaStudio_S2_1200x1600-fbdf3cbc2980749091d52751ffabb7b7_1200x1600-fbdf3cbc2980749091d52751ffabb7b7" width="300" alt="God of War">
             <p><strong>Resumen:</strong> Kratos, el dios de la guerra, se embarca en una nueva aventura en la mitología nórdica junto a su hijo Atreus. El juego combina combates intensos con una narrativa profunda y emocional.</p>
         </div>
 
         <div class="game">
             <h2>Cyberpunk 2077</h2>
-            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202111/3013/6bAF2VVEamgKclalI0oBnoAe.jpg" alt="Cyberpunk 2077">
+            <img src="https://image.api.playstation.com/vulcan/ap/rnd/202111/3013/6bAF2VVEamgKclalI0oBnoAe.jpg" width="300" alt="Cyberpunk 2077">
             <p><strong>Resumen:</strong> En un futuro distópico, los jugadores asumen el papel de V, un mercenario que busca un implante único que otorga la inmortalidad. El juego ofrece un mundo abierto lleno de opciones y personalización.</p>
         </div>
 
         <div class="game">
             <h2>Among Us</h2>
-            <img src="https://cdn1.epicgames.com/salesEvent/salesEvent/amoguslandscape_2560x1440-3fac17e8bb45d81ec9b2c24655758075" alt="Among Us">
+            <img src="https://cdn1.epicgames.com/salesEvent/salesEvent/amoguslandscape_2560x1440-3fac17e8bb45d81ec9b2c24655758075" width="300" alt="Among Us">
             <p><strong>Resumen:</strong> Este juego multijugador en línea pone a los jugadores en una nave espacial donde deben completar tareas mientras intentan descubrir quiénes son los impostores que intentan sabotear la misión.</p>
         </div>
     </div>
