--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 3</title>
+    <title>Videojuegos</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -60,7 +60,7 @@
 
         <div class="game">
             <h2>The Legend of Zelda: Breath of the Wild</h2>
-            <img src="https://upload.wikimedia.org/wikipedia/en/c/c6/The_Legend_of_Zelda_Breath_of_the_Wild.jpg" width="300" alt="Legend of Zelda: Breath of the Wild">
+            <img src="https://upload.wikimedia.org/wikipedia/en/c/c6/The_Legend_of_Zelda_Breath_of_the_Wild.jpg" width="300" alt="The Legend of Zelda: Breath of the Wild">
             <p><strong>Resumen:</strong> En este juego de acción y aventura, los jugadores exploran un vasto mundo abierto lleno de misterios, enemigos y desafíos. Link debe rescatar a la princesa Zelda y salvar el reino de Hyrule del malvado Ganon.</p>
         </div>
 
